@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -36,6 +36,7 @@ import org.springframework.http.client.ClientHttpResponse;
 
 import javax.annotation.Nullable;
 import java.io.IOException;
+import java.net.URI;
 import java.util.Objects;
 
 public class SpringRestTemplateAdvice {
@@ -46,11 +47,13 @@ public class SpringRestTemplateAdvice {
     @Advice.OnMethodEnter(suppress = Throwable.class, inline = false)
     public static Object beforeExecute(@Advice.This ClientHttpRequest request) {
         logger.trace("Enter advice for method {}#execute()", request.getClass().getName());
-        if (TracerAwareInstrumentation.tracer.getActive() == null) {
+
+        final AbstractSpan<?> parent = TracerAwareInstrumentation.tracer.getActive();
+        if (parent == null) {
             return null;
         }
-        final AbstractSpan<?> parent = TracerAwareInstrumentation.tracer.getActive();
-        Span span = HttpClientHelper.startHttpClientSpan(parent, Objects.toString(request.getMethod()), request.getURI(), request.getURI().getHost());
+        URI uri = request.getURI();
+        Span span = HttpClientHelper.startHttpClientSpan(parent, Objects.toString(request.getMethod()), uri, uri.getHost());
         if (span != null) {
             span.activate();
             span.propagateTraceContext(request, SpringRestRequestHeaderSetter.INSTANCE);
@@ -68,8 +71,8 @@ public class SpringRestTemplateAdvice {
             Span span = (Span) spanObj;
             try {
                 if (clientHttpResponse != null) {
-                    int statusCode = clientHttpResponse.getRawStatusCode();
-                    span.getContext().getHttp().withStatusCode(statusCode);
+                    // getRawStatusCode has been introduced in 3.1.1
+                    span.getContext().getHttp().withStatusCode(clientHttpResponse.getRawStatusCode());
                 }
                 span.captureException(t);
             } finally {
