@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -55,6 +55,7 @@ public class SpringRestTemplateInstrumentationTest extends AbstractHttpClientIns
 
     @Override
     protected void performGet(String path) {
-        restTemplate.getForEntity(path, Void.class);
+        // note: getForEntity is only available as of Spring-web 3.0.2
+        restTemplate.getForEntity(path, String.class);
     }
 }
