@@ -26,7 +26,7 @@
         <module>apm-spring-webmvc-plugin</module>
         <module>apm-api-plugin</module>
         <module>apm-apache-httpclient-plugin</module>
-        <module>apm-spring-resttemplate-plugin</module>
+        <module>apm-spring-resttemplate</module>
         <module>apm-httpclient-core</module>
         <module>apm-log-correlation-plugin</module>
         <module>apm-log-shipper-plugin</module>
